<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UserInfoActivity" >

    <Switch
        android:id="@+id/cal_threshold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calorie_threshold" />

    <LinearLayout
        android:id="@+id/cal_threshold_ll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible" >

        <EditText
            android:id="@+id/calories_per_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.89"
            android:inputType="numberDecimal" >

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calories_per_day" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cal_threshold_ll_ll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible" >

        <Button
            android:id="@+id/ok_calorie"
            style="@style/AppBaseTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok" />

        <Button
            android:id="@+id/cancel_calorie"
            style="@style/AppBaseTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>

    <Switch
        android:id="@+id/budget_threshold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/budget_threshold" />

    <LinearLayout
        android:id="@+id/budget_threshold_ll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar_sign" />

        <EditText
            android:id="@+id/budget_per_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.14"
            android:inputType="numberDecimal" >

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/budget_per_day" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/budget_threshold_ll_ll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible" >

        <Button
            android:id="@+id/ok_budget"
            style="@style/AppBaseTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok" />

        <Button
            android:id="@+id/cancel_budget"
            style="@style/AppBaseTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>