<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FoodItemActivity" >


 <TextView
     android:id="@+id/suggestAMealTextView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_alignLeft="@android:id/list"
     android:text="@string/suggest_a_meal"
     android:textAppearance="?android:attr/textAppearanceLarge" />
 
 <TextView
     android:id="@+id/suggestAMealExplainationTextView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_below="@+id/suggestAMealTextView"
     android:layout_alignLeft="@android:id/list"
     android:text="@string/suggest_a_meal_explaination"
     android:textAppearance="?android:attr/textAppearanceSmall" />
 
 <TextView
     android:id="@+id/suggestAMealSuggestAgainTextView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_below="@+id/suggestAMealExplainationTextView"
     android:layout_alignLeft="@android:id/list"
     android:text="@string/suggest_a_meal_suggest_again"
     android:textAppearance="?android:attr/textAppearanceSmall" />
 
 
 <ListView
     android:id="@android:id/list"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"
     android:layout_below="@+id/suggestAMealSuggestAgainTextView"
     android:orientation="vertical" >

    </ListView>

</RelativeLayout>