<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CaloriesSummaryActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent" >

        <TextView
            android:id="@+id/meal_summary"
            android:layout_width="289dp"
            android:layout_height="37dp"
            android:text="@string/meal_summary" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dip"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_your_price_here" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dollar_sign" />

            <EditText
                android:id="@+id/price"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.89"
                android:inputType="numberDecimal" >
            </EditText>
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dip"
            android:background="#000000" />

        <ListView
            android:id="@+id/selected_fooditem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="false"
            android:orientation="vertical" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dip"
            android:background="#000000" />

        <TextView
            android:id="@+id/total_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/total_carbs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/total_fat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dip"
            android:background="#000000" />

        <TextView
            android:id="@+id/remaining_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/remaining_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dip"
            android:background="#000000" />
    </LinearLayout>

</LinearLayout>